--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,5 +1,7 @@
 <div class="navbar navbar-default">
+	<div class="container">
   <div class="navbar-header">
+  	<a class="navbar-brand" href="/">WorkWisdom</a>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -7,20 +9,21 @@
     </button>
     
   </div>
-   <a class="navbar-brand" href="/">WorkWisdom</a>
+   
    
 <div class="navbar-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav">
 	  <li><a href="/">Home</a></li>
 	  <li><a href="/quotes">Quotes</a></li>
 	  <li><a href="/people">People</a></li>
-	  <li><a href="#">About</a></li>
+	  <li><a href="/about">About</a></li>
 	  <li><a href="/submit">Submit</a></li>		
 	  <li><a href="/cms">CMS</a></li>
 	  <!-- <form class="navbar-form navbar-left"></li>-->
 	  <!--<input type="text" class="form-control col-lg-8" placeholder="Search">-->
 	  <!--</form>-->
     </ul>
+</div>
 </div>
 	
 </div>
